# HWOJ

./: .gitignore  .gitmodules  INSTALLATION.md  R-backend.md  R-judge.md  README.md  generate_env.py
backend/: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/example/: aplusb.md
backend/example/aplusb/: .json  answer.cpp  big.cpp  bigValid.cpp  config.json  small.cpp  smallValid.cpp  statement.md
backend/example/aplusb/t/: 1_neg.cpp  2_neg.cpp
backend/example/equalc/: answer.cpp  checker.cpp  config.json  generator.cpp  statement.md
backend/src/: __init__.py  admin.py  cli.py  database.py  database_public.py  models_public.py  public.py  settings.py
backend/src/admin/: __init__.py  problem_manager.py
backend/src/database/: __init__.py  auth.py  judger.py  link.py  problem.py  submission.py
backend/src/dependencies/: __init__.py  contest.py  problem.py  user.py
backend/src/judger/: __init__.py
backend/src/models/: __init__.py  contest.py  links.py  problem.py  submission.py  user.py
backend/src/routers/: __init__.py  api.py  auth.py  judge.py  judger.py  verify.py
backend/src/routers-admin/: __init__.py  auth.py  judge.py  problem.py
backend/src/routers-user/: __init__.py  problem.py
backend/src/routers/admin/: __init__.py  problem_manager.py  problemsetter.py
backend/src/routers_admin/: __init__.py  judge.py  problem.py
backend/src/routers_user/: __init__.py  auth.py  problem.py
backend/src/user/: auth.py  problem.py
backend/src/webhook/: __init__.py  judger.py
(+128 files in other folders)
