[project]
name = "HWOJ-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastadmin[fastapi,sqlalchemy]>=0.10.0",
    "asyncmy>=0.2.10",
    "aiosqlite>=0.21.0",
    "alembic>=1.18.5",
    "fastapi-pagination>=0.15.15",
    "fastapi[standard]>=0.125.0",
    "itsdangerous>=2.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]

[project.scripts]
hwoj = "src.cli:main"
